fix: footer font size on mobile

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -22,6 +22,6 @@
 @media screen and (max-width: 500px), screen and (max-height: 500px) {
   .footer {
     margin-bottom: 5px;
-    font-size: 15x;
+    font-size: 14px;
   }
 }
